<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>aadesaed.cat.app</groupId>
  <artifactId>purrcat</artifactId>
  <version>0.0.3-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>purrcat</name>
  <description>
  My purrcat: A Java implementation of Unix cat
  </description>
  <url>https://github.com/gyreas/purrcat</url>
  <inceptionYear>2023</inceptionYear>
  <licenses>
    <license>
      <name>MPL-2.0</name>
      <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Saheed Adeleye</name>
      <email>aadesaed@tuta.io</email>
      <id>gyreas</id>
      <roles>
        <role>Owner</role>
        <role>Creator</role>
        <role>Maintainer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/gyreas/purrcat.git</connection>
    <url>https://github.com/gyreas/purrcat.git</url>
  </scm>
  <issueManagement>
    <system>Github</system>
    <url>https://github.com/gyreas/purrcat/issues</url>
  </issueManagement>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/gyreas/purrcat</url>
    </repository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <app.dir>src/aadesaed/cat/app</app.dir>
    <app.resources>${app.dir}/resources</app.resources>
    <app.license>MPL-2.0</app.license>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.8.0</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <outputDirectory>target/classes</outputDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <testOutputDirectory>target/test-classes</testOutputDirectory>

    <resources>
      <resource>
        <directory>${app.resources}</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.3</version>
        <configuration>
          <suiteXmlFiles>
            <suiteXmlFile>test/TestAll.xml</suiteXmlFile>
          </suiteXmlFiles>
          <groups>File,Stdin</groups>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <archive>
            <manifestFile>${app.resources}/META-INF/MANIFEST.MF</manifestFile>
            <manifestEntries>
              <License>${app.license}</License>
            </manifestEntries>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <mainClass>aadesaed.cat.app.App</mainClass>
              <packageName>purrcat</packageName>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
